charts/testkube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics
  labels:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: testkube-analytics
    meta.helm.sh/release-name: analytics
    meta.helm.sh/release-namespace: analytics
    nginx.ingress.kubernetes.io/access-control-allow-origin: ""
    nginx.ingress.kubernetes.io/auth-signin: ""
    nginx.ingress.kubernetes.io/auth-url: ""
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/cors-allow-methods: GET
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - analytics.testkube.io
      secretName: testkube-demo-cert-secret
  rules:
    - host: analytics.testkube.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testkube-analytics
                port:
                  number: 8888
